@@ -3404,6 +3404,8 @@ Stefan Hofmann <stefan.hofmann@t-online.de>
  for revising the German language texts
  for reporting that the number of missing frames may be way off after regenerating the index
  if there are longer gaps in the recording
+ for suggesting to make the time before a deleted recording is actually removed from the
+ disk adjustable
 
 Stefan Blochberger <Stefan.Blochberger@gmx.de>
  for suggesting to automatically display the progress display whenever replay of a
